--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [
     "Apache",
@@ -21,8 +22,11 @@
     "cors": "^2.8.5",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "json-odm": "^0.2.4",
     "kafkajs": "^1.15.0",
+    "node-json-db": "^1.3.0",
     "socket.io": "^4.0.0",
     "uuid": "^8.3.2"
   },
